input search > text

--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -992,7 +992,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" aria-label="별칭" placeholder="예) 자주쓰는 명함, OO고객 전용">
+										<input type="text" aria-label="별칭" placeholder="예) 자주쓰는 명함, OO고객 전용">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
