--- a/html/PBWBU/PBWBU010001_modify.html
+++ b/html/PBWBU/PBWBU010001_modify.html
@@ -104,7 +104,8 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="search" placeholder="이름, 회사명으로 검색해 보세요." aria-label="검색">
+								<input type="text" placeholder="이름, 회사명으로 검색해 보세요." aria-label="검색">
+								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
@@ -352,7 +353,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" aria-label="이름" placeholder="">
+										<input type="text" aria-label="이름" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -369,7 +371,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" aria-label="회사" placeholder="">
+										<input type="text" aria-label="회사" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -404,7 +407,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" aria-label="부서" placeholder="">
+										<input type="text" aria-label="부서" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -421,7 +425,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" aria-label="직책" placeholder="">
+										<input type="text" aria-label="직책" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
@@ -492,7 +497,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" aria-label="주소" placeholder="">
+										<input type="text" aria-label="주소" placeholder="">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
