--- a/html/PBWCA/PBWCA010000_month.html
+++ b/html/PBWCA/PBWCA010000_month.html
@@ -106,7 +106,8 @@
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap">
-									<input type="search" placeholder="제목을 입력하세요." aria-label="제목">
+									<input type="text" placeholder="제목을 입력하세요." aria-label="제목">
+                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								</div>
 								<p class="validate-text"></p>
 							</div>
@@ -217,7 +218,8 @@
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap">
-									<input type="search" placeholder="장소를 입력하세요." aria-label="장소">
+									<input type="text" placeholder="장소를 입력하세요." aria-label="장소">
+                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								</div>
 								<p class="validate-text"></p>
 							</div>
@@ -250,7 +252,8 @@
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap disabled">
-									<input type="search" placeholder="공유할 직원을 선택하세요." aria-label="제목" disabled>
+									<input type="text" placeholder="공유할 직원을 선택하세요." aria-label="제목" disabled>
+                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								</div>
 								<p class="validate-text"></p>
 							</div>
@@ -499,21 +502,24 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-placeholder">
-										<input type="search" placeholder="이름 입력" aria-label="이름">
+										<input type="text" placeholder="이름 입력" aria-label="이름">
+                                        <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-placeholder">
-										<input type="search" placeholder="부서명 입력" aria-label="부서명">
+										<input type="text" placeholder="부서명 입력" aria-label="부서명">
+                                        <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap input-placeholder">
-										<input type="search" placeholder="담당업무 입력" aria-label="담당업무">
+										<input type="text" placeholder="담당업무 입력" aria-label="담당업무">
+                                        <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
