--- a/html/PBWCL/PBWCL030000.html
+++ b/html/PBWCL/PBWCL030000.html
@@ -110,7 +110,8 @@
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap">
-									<input type="search" placeholder="검색어를 2자 이상 입력해주세요." aria-label="검색대상">
+									<input type="text" placeholder="검색어를 2자 이상 입력해주세요." aria-label="검색대상">
+                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								</div>
 								<p class="validate-text"></p>
 							</div>
