--- a/html/PBWFU/PBWFU050000.html
+++ b/html/PBWFU/PBWFU050000.html
@@ -484,7 +484,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" placeholder="한글과 영문, 숫자만 입력해주세요." aria-label="닉네임">
+										<input type="text" placeholder="한글과 영문, 숫자만 입력해주세요." aria-label="닉네임">
+                                        <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
