--- a/html/PBWIV/PBWIV120000.html
+++ b/html/PBWIV/PBWIV120000.html
@@ -283,7 +283,8 @@
 								<div class="form">
 									<div class="label"></div>
 									<div class="input-wrap">
-										<input type="search" placeholder="키워드로 검색해 보세요." aria-label="검색">
+										<input type="text" placeholder="키워드로 검색해 보세요." aria-label="검색">
+										<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									</div>
 									<p class="validate-text"></p>
 								</div>
