--- a/html/PBWBU/PBWBU010001_noresult.html
+++ b/html/PBWBU/PBWBU010001_noresult.html
@@ -104,7 +104,8 @@
 						<div class="form">
 							<div class="label"></div>
 							<div class="input-wrap input-btn">
-								<input type="search" placeholder="이름, 회사명으로 검색해 보세요." aria-label="검색">
+								<input type="text" placeholder="이름, 회사명으로 검색해 보세요." aria-label="검색">
+								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 							</div>
 							<p class="validate-text"></p>
