--- a/html/PBWCA/PBWCA040000.html
+++ b/html/PBWCA/PBWCA040000.html
@@ -102,7 +102,8 @@
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap">
-									<input type="search" placeholder="제목, 메모 입력" aria-label="일정 검색">
+									<input type="text" placeholder="제목, 메모 입력" aria-label="일정 검색">
+                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								</div>
 								<p class="validate-text"></p>
 							</div>
