--- a/html/PBWFU/PBWFU000002_noresult.html
+++ b/html/PBWFU/PBWFU000002_noresult.html
@@ -112,7 +112,8 @@
 							<div class="form">
 								<div class="label"></div>
 								<div class="input-wrap input-btn">
-									<input type="search" placeholder="펀드명으로 검색해 보세요." aria-label="검색">
+									<input type="text" placeholder="펀드명으로 검색해 보세요." aria-label="검색">
+                                    <button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 									<button type="button" class="input-search" aria-label="입력 내용 검색"></button>
 								</div>
 								<p class="validate-text"></p>
