--- a/html/PBWBU/PBWBU000001.html
+++ b/html/PBWBU/PBWBU000001.html
@@ -1025,6 +1025,38 @@
 						</div>
 						<!-- //group-form -->
 
+						<!-- group-form -->
+						<div class="group-form mt40">
+							<div class="group-title">
+								<strong class="title-medium">전화번호</strong>
+							</div>
+							<div class="group-content">
+								<div class="inp-group flex-column">
+									<div class="inp inp-medium">
+										<label>
+											<input type="radio" name="rad003">
+											<span class="label-title">02-1588-6161</span>
+										</label>
+									</div>
+									<div class="inp inp-medium flex-column">
+										<label>
+											<input type="radio" name="rad003">
+											<span class="label-title">직접 입력</span>
+										</label>
+										<div class="form">
+											<div class="label"></div>
+											<div class="input-wrap">
+												<input type="tel" placeholder="전화번호" aria-label="전화번호">
+											</div>
+											<p class="validate-text"></p>
+										</div>
+									</div>
+
+								</div>
+							</div>
+						</div>
+						<!-- //group-form -->
+
 						<div class="stroke my40"></div>
 
 						<!-- group -->
