경제캘린더

--- a/html/index.html
+++ b/html/index.html
@@ -1001,7 +1001,14 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWIV080000</a></td>
 					</tr>
-
+					<tr>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td>검색</td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWIV080002</a></td>
+					</tr>
 					<tr>
 						<td></td>
 						<td></td>
@@ -1072,7 +1079,24 @@
 						<td></td>
 						<td class="al article"><a href="" class="link inner-arrow">PBWME030000</a></td>
 					</tr>
-
+				</tbody>
+				<tbody data-folder="PBWPU">
+					<tr>
+						<td>PBWPU</td>
+						<td>알림함</td>
+						<td></td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWPU009900</a></td>
+					</tr>
+					<tr>
+						<td></td>
+						<td></td>
+						<td>알림없음</td>
+						<td></td>
+						<td></td>
+						<td class="al article"><a href="" class="link inner-arrow">PBWPU009900_nodata</a></td>
+					</tr>
 				</tbody>
 
 			</table>
